# vigilant-upgoer-code

./: .gitignore  platformio.ini
sim/: Arduino.h  CMakeLists.txt  aitry1.py  arduino_stubs.cpp  arduino_stubs.h  gui.py  model_loader.py  rocket_gl.py  rocket_plant.py  sim_flight_control.cpp  sim_globals.h  simulate.py  surface_dialog.py  vehicle_extractor.py  vehicle_spec_dialog.py
sim/scenarios/: nominal.json  pitch_kick.json  wind_gust.json
src/: FLIGHT_CONTROL_DOCS.md  Launchsequence.h  background_tasks.h  buzzers.h  debug_cli.h  flight_profile.h  globals.h  guidance_flight_control.h  index.html  instruments.h  main.cpp  web_server.h
test_tools/: PROFILES_README.md  README.md  platformio.ini  profile_visualizer.py
test_tools/include/: test_tools.h
test_tools/sample_profiles/: math_test.json
test_tools/src/: main.cpp
